--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -35,7 +35,8 @@
 
     <div class="buttonHolder">
       <button class="btn btn-success secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-      <button class="btn btn-info secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+      <!--<button class="btn btn-info secondaryAction" type="submit"
+          name="action_send" >{% trans 'Re-send Verification' %}</button>-->
       <button class="btn btn-danger primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
     </div>
 
@@ -54,7 +55,7 @@
     <form method="post" action="{% url 'account_email' %}" class="col-md-4 add_email">
         {% csrf_token %}
         {{ form|crispy }}
-        <button name="action_add" class="btn btn-info" type="submit">{% trans "Add E-mail" %}</button>
+        <button name="action_add" class="btn btn-info mt-2" type="submit">{% trans "Add E-mail" %}</button>
     </p>
     </form>
     {% endif %}
