--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,
       shrink-to-fit=no">
-    <title>{% block title %}Learning Log{% endblock title %}</title>
+    <title>{% block title %}Django Blog API{% endblock title %}</title>
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"/>
     <!-- CSS -->
     {% bootstrap_css %}
