--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -3,7 +3,7 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "E-mail Addresses" %}{% endblock %}
+{% block title %}{% trans "E-mail Addresses" %}{% endblock title %}
 
 {% block content %}
 <div class="container">
@@ -35,8 +35,7 @@
 
     <div class="buttonHolder">
       <button class="btn btn-success secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-      <!--<button class="btn btn-info secondaryAction" type="submit"
-          name="action_send" >{% trans 'Re-send Verification' %}</button>-->
+      <button class="btn btn-info secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
       <button class="btn btn-danger primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
     </div>
 
@@ -55,7 +54,8 @@
     <form method="post" action="{% url 'account_email' %}" class="col-md-4 add_email">
         {% csrf_token %}
         {{ form|crispy }}
-        <button name="action_add" class="btn btn-info mt-2" type="submit">{% trans "Add E-mail" %}</button>
+        <button name="action_add" class="btn btn-primary" type="submit">{% trans "Add E-mail" %}</button>
+      <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
     </p>
     </form>
     {% endif %}
