--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -11,8 +11,8 @@
   <form class="col-md-4" method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button class="btn btn-success" type="submit">Sign Up</button>
-    <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
+    <button class="btn btn-success mt-2" type="submit">Sign Up</button>
+    <a class="btn btn-info mt-2" href="javascript:window.history.back()">Cancel</a>
   </form>
   </p>
 </div>
