--- a/templates/base.html
+++ b/templates/base.html
@@ -4,35 +4,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1,
-      shrink-to-fit=no">
-    <title>Django Blog API | {% block title %}{% endblock title %}</title>
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"/>
-    <!-- CSS -->
-    {% bootstrap_css %}
-    {% bootstrap_javascript jquery='full' %}
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Django Blog API | {% block title %}{% endblock title %}</title>
+  <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"/>
+  <!-- CSS -->
+  {% bootstrap_css %}
+  {% bootstrap_javascript jquery='full' %}
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
-   <header>
-   <!-- Fixed navbar -->
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-   <a class="navbar-brand" href="/api/v1/">Blog API</a>
-   {% if user.is_authenticated %}
-     <ul class="navbar-nav mr-auto">
-       <li class="nav-item">
-         <a class="btn btn-outline-info" href="{% url 'postlist' %}">PostListView</a>
-       </li>
-     </ul>
-   {% endif %}
-   <button class="navbar-toggler" type="button" data-toggle="collapse"
-   data-target="#navbarSupportedContent"
-   aria-controls="navbarSupportedContent" aria-expanded="false"
-   aria-label="Toggle navigation">
-     <span class="navbar-toggler-icon"></span>
-   </button>
+  <header>
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/api/v1/">Blog API</a>
+  {% if user.is_authenticated %}
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="btn btn-outline-info" href="{% url 'postlist' %}">PostListView</a>
+      </li>
+    </ul>
+  {% endif %}
+  <button class="navbar-toggler" type="button" data-toggle="collapse"
+  data-target="#navbarSupportedContent"
+  aria-controls="navbarSupportedContent" aria-expanded="false"
+  aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       {% if user.is_authenticated %}
           <li class="nav-item">
