--- a/templates/base.html
+++ b/templates/base.html
@@ -33,10 +33,10 @@
   </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       {% if user.is_authenticated %}
-          <li class="nav-item">
+          <li class="nav-item no-bullets">
           <a href="{% url 'redoc' %}" class="btn btn-outline-info ml-2">Redoc</a>
           </li>
-          <li>
+          <li class="no-bullets">
           <a href="{% url 'swagger-ui' %}" class="btn btn-outline-info ml-2">Swagger-UI</a>
           </li>
         <ul class="navbar-nav ml-auto">
