--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -27,3 +27,9 @@ ul.no-bullets {
   /* padding: 0;  Remove padding */
   margin: 0; /* Remove margins */
 }
+
+li.no-bullets {
+  list-style-type: none; /* Remove bullets */
+  padding: 0; /*  Remove padding */
+  margin: 0; /* Remove margins */
+}
