Add application screenshots

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block page_header %}
+{% block content %}
   <div class="jumbotron">
     <h2 class="display-4">Welcome to the Blog API</h2>
 
@@ -16,4 +16,4 @@
         role="button">Register &raquo;</a>
     {% endif %}
   </div>
-{% endblock page_header %}
+{% endblock content %}
